fix: modify way of retrieving the last element from the list and update access modifier of PostCommentWriteReqBody
- An error occurred when using the `getLast()` method to retrieve the last element from the `PostComment` list.
- Since `List` does not provide a `getLast()` method, changed the approach to retrieve the last element using `post.getComments().size() - 1`.
- Fixed the `create comment` test to properly fetch `lastPostComment`, ensuring the test works correctly.

- Added the `public` access modifier to the `PostCommentWriteReqBody` class to allow access from other packages.
- This change enables `ApiV1PostCommentController` to properly use the DTO.